tests/idris2/reg019/expected
1/1: Building lazybug (lazybug.idr)
Error: While processing right hand side of main. Can't solve constraint between: Bool and Lazy Bool.

lazybug.idr:5:22--5:34
   |
 5 | main = printLn $ or (map id bools)
   |                      ^^^^^^^^^^^^

Error: While processing right hand side of main2. Can't solve constraint between: Bool and Lazy Bool.

lazybug.idr:8:23--8:42
   |
 8 | main2 = printLn $ or (map (\x => x) bools)
   |                       ^^^^^^^^^^^^^^^^^^^

Error: While processing right hand side of main4. Can't solve constraint between: Bool and Lazy Bool.

lazybug.idr:14:22--14:27
    |
 14 | main4 = printLn $ or bools
    |                      ^^^^^

